--- a/index.html
+++ b/index.html
@@ -593,9 +593,13 @@
       flex-wrap:wrap;
     }
     .consigne-card__title-text {
+      display:inline-flex;
+      align-items:center;
+      gap:.25rem;
       flex:1 1 auto;
       min-width:0;
       word-break:break-word;
+      flex-wrap:wrap;
     }
     .consigne-card__field-store {
       display:none;
@@ -924,7 +928,7 @@
       align-items:center;
       justify-content:center;
       margin-left:0;
-      margin-right:.35rem;
+      margin-right:0;
       font-size:.95rem;
       line-height:1;
       color:#facc15;
