--- a/index.html
+++ b/index.html
@@ -593,13 +593,15 @@
       flex-wrap:wrap;
     }
     .consigne-card__title-text {
-      display:inline-flex;
+      display:flex;
+      flex-wrap:nowrap;
       align-items:center;
       gap:.25rem;
+    }
+    .consigne-card__title-label {
       flex:1 1 auto;
       min-width:0;
       word-break:break-word;
-      flex-wrap:wrap;
     }
     .consigne-card__field-store {
       display:none;
@@ -929,6 +931,7 @@
       justify-content:center;
       margin-left:0;
       margin-right:0;
+      flex:0 0 auto;
       font-size:.95rem;
       line-height:1;
       color:#facc15;
