Fix high priority consigne title color

--- a/index.html
+++ b/index.html
@@ -592,6 +592,10 @@
       word-break:break-word;
       flex-wrap:wrap;
     }
+    .priority-surface-high .consigne-card__title,
+    .priority-surface-high .consigne-card__title-label {
+      color:#2563eb;
+    }
     .consigne-card__title-text {
       display:flex;
       flex-wrap:nowrap;
