Compact child badge label

--- a/index.html
+++ b/index.html
@@ -890,8 +890,9 @@
     .consigne-card__child-count {
       display:inline-flex;
       align-items:center;
-      gap:.25rem;
-      padding:.15rem .5rem;
+      justify-content:center;
+      min-width:1.5rem;
+      padding:.15rem .4rem;
       border-radius:999px;
       border:1px solid rgba(148,163,184,.35);
       background:rgba(148,163,184,.12);
