--- a/index.html
+++ b/index.html
@@ -594,7 +594,7 @@
     }
     .priority-surface-high .consigne-card__title,
     .priority-surface-high .consigne-card__title-label {
-      color:#2563eb;
+      color:#60a5fa;
     }
     .consigne-card__title-text {
       display:flex;
