Adjust child consigne layout inside parent cards

--- a/index.html
+++ b/index.html
@@ -442,6 +442,7 @@
         gap:.65rem;
       }
       .consigne-card__children {
+        margin:.3rem -.45rem -.45rem;
         padding:.55rem .6rem;
         gap:.4rem;
       }
@@ -466,6 +467,7 @@
         gap:.55rem;
       }
       .consigne-card__children {
+        margin:.28rem -.55rem -.55rem;
         padding:.45rem .5rem;
         gap:.35rem;
       }
@@ -845,18 +847,16 @@
       gap:.75rem;
       padding:0;
     }
-    .consigne-group__children {
-      display:block;
-      width:100%;
-    }
     .consigne-card__children {
       display:grid;
       gap:.5rem;
       width:100%;
-      background:#f8fafc;
+      background:#fff;
       border:1px solid rgba(148,163,184,.28);
-      border-radius:.65rem;
-      padding:.65rem .75rem;
+      border-radius:.55rem;
+      margin:.35rem -.45rem -.45rem;
+      padding:.55rem .6rem;
+      box-shadow:0 6px 14px rgba(15,23,42,.08);
     }
     .consigne-card__children-label {
       font-size:.78rem;
