--- a/index.html
+++ b/index.html
@@ -738,21 +738,21 @@
     .consigne-actions__panel {
       position:absolute;
       right:0;
-      top:calc(100% + .45rem);
+      top:calc(100% + .25rem);
       display:flex;
       flex-direction:column;
       align-items:stretch;
       gap:.25rem;
-      min-width:11rem;
+      min-width:9rem;
       padding:.5rem;
       background:#fff;
-      border:1px solid rgba(148,163,184,.28);
-      border-radius:.9rem;
-      box-shadow:0 18px 40px rgba(15,23,42,.16);
-      z-index:30;
+      border:1px solid rgba(148,163,184,.35);
+      border-radius:.75rem;
+      box-shadow:0 10px 30px -12px rgba(15,23,42,.25);
+      z-index:10;
     }
     .consigne-actions__panel[hidden] {
-      display:none;
+      display:none !important;
     }
     .consigne-actions__panel .btn {
       width:100%;
